<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_weight="1.95"
        android:layout_height="match_parent"
        android:backgroundTint="@color/black"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

    </LinearLayout>

    <EditText
        android:padding="20dp"
        android:background="@null"
        android:id="@+id/number"
        android:cursorVisible="true"
        android:focusedByDefault="true"
        android:focusable="true"
        android:layout_height="match_parent"
        android:focusableInTouchMode="false"
        android:layout_width="match_parent"
        android:textSize="75sp"
        android:gravity="end"
        android:layout_weight="1.2"/>

    <LinearLayout
        android:layout_weight="1.1"
        android:layout_height="match_parent"
        android:backgroundTint="@color/black"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="3"
            android:rowCount="4">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button7"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/seven"
                android:textSize="40sp"
                android:fontFamily="@font/regular"
                android:textColor="@color/black"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button8"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/eight"
                android:textSize="40sp"
                android:fontFamily="@font/regular"
                android:textColor="@color/black"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button9"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/nine"
                android:textSize="40sp"
                android:fontFamily="@font/regular"
                android:textColor="@color/black"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button4"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/four"
                android:textSize="40sp"
                android:fontFamily="@font/regular"
                android:textColor="@color/black"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button5"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/five"
                android:textSize="40sp"
                android:fontFamily="@font/regular"
                android:textColor="@color/black"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button6"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/six"
                android:textSize="40sp"
                android:fontFamily="@font/regular"
                android:textColor="@color/black"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button1"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/one"
                android:textSize="40sp"
                android:fontFamily="@font/regular"
                android:textColor="@color/black"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button2"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/two"
                android:textSize="40sp"
                android:fontFamily="@font/regular"
                android:textColor="@color/black"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button3"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/three"
                android:textSize="40sp"
                android:fontFamily="@font/regular"
                android:textColor="@color/black"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button0"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/zero"
                android:textSize="40sp"
                android:fontFamily="@font/regular"
                android:textColor="@color/black"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDot"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/decimal"
                android:textSize="40sp"
                android:fontFamily="@font/regular"
                android:textColor="@color/black"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonEquals"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/equals"
                android:textSize="40sp"
                android:fontFamily="@font/regular"
                android:textColor="@color/black"/>

        </GridLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:columnCount="1"
            android:rowCount="5">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clearText"
                android:layout_rowWeight="1"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textSize="25sp"
                android:text="@string/clear"
                android:fontFamily="@font/regular"
                android:textColor="@color/colorPrimaryDark"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/divide"
                android:layout_rowWeight="1"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textSize="25sp"
                android:text="@string/divide"
                android:fontFamily="@font/regular"
                android:textColor="@color/colorPrimaryDark"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/multiply"
                android:layout_rowWeight="1"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textSize="25sp"
                android:text="@string/multiply"
                android:fontFamily="@font/regular"
                android:textColor="@color/colorPrimaryDark"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/subtract"
                android:layout_rowWeight="1"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textSize="25sp"
                android:text="@string/minus"
                android:fontFamily="@font/regular"
                android:textColor="@color/colorPrimaryDark"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/plus"
                android:layout_rowWeight="1"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textSize="25sp"
                android:text="@string/plus"
                android:fontFamily="@font/regular"
                android:textColor="@color/colorPrimaryDark"/>

        </GridLayout>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
</LinearLayout>